# prometheus-code

./: .gitignore  CMakeLists.txt
exp/: CMakeLists.txt
exp/cone/: CMakeLists.txt  cone.c
exp/cone_m/: CMakeLists.txt  cone_m.c
exp/flight_pin/: CMakeLists.txt  flight_pin.c
exp/is_landed/: CMakeLists.txt  is_landed.c
exp/mag_cal/: CMakeLists.txt  mag_cal.c
exp/nichrome/: nichrome.c
exp/pid/: CMakeLists.txt
exp/pid/example/: CMakeLists.txt  ex_pid.c
exp/pid/example/ex1_keep_speed/: CMakeLists.txt  ex1_pid.c
exp/pid/example/ex2_enkaigei/: CMakeLists.txt  ex2_enkaigei.c
exp/pid/src/: CMakeLists.txt  pid.c  pid.h
exp/quadrature_encoder/: CMakeLists.txt  quadrature_encoder.c
exp/rotate/: CMakeLists.txt  rotate.c
exp/selftest/: CMakeLists.txt  selftest.c
exp/tire/: CMakeLists.txt  tire.c
flight/: CMakeLists.txt  flight.c  util.h
lib/: CMakeLists.txt
lib/gnss/: CMakeLists.txt
lib/gnss/example/: ex_gnss.c
lib/health_monitor/: CMakeLists.txt
lib/health_monitor/example/: CMakeLists.txt  monitor_IV.c
lib/icm20948/: CMakeLists.txt
lib/motor_encoder/example/: ex_motor_encoder.c
lib/motor_encoder/src/: motor.c  motor.h
lib/nmea_pico/: CMakeLists.txt
lib/nmea_pico/MAX-M10S_pico/: CMakeLists.txt  MAX-M10S_pico.c  MAX-M10S_pico.h
lib/nmea_pico/examples/: CMakeLists.txt  ex_.c
lib/nmea_pico/src/: CMakeLists.txt  nmea_pico.c  nmea_pico.h
lib/nmea_pico/teseo_pico/: CMakeLists.txt  teseo_pico.c  teseo_pico.h
lib/nmea_pico/testing/: CMakeLists.txt  testing.c
lib/prometheus-pin/: CMakeLists.txt  prometheus-pin.c  prometheus-pin.h
